--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,4 +33,4 @@ services:
     ports:
       - "19000:9000"
     environment:
-      KAFKA_BROKERCONNECT: kafka:9092
+      KAFKA_BROKER_CONNECT: kafka:9092
